# localagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  config.example.toml  docusaurus.config.ts  sidebars.ts
apps/android/: .gitignore  README.md  settings.gradle.kts
apps/android/LocalGPTApp/src/main/java/com/localgpt/app/: ChatViewModel.kt  LocalGPTApplication.kt  MainActivity.kt
apps/android/app/: build.gradle.kts
apps/android/app/src/androidTest/java/app/localgpt/: ExampleInstrumentedTest.kt
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/app/localgpt/: MainActivity.kt
apps/android/app/src/main/java/app/localgpt/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/test/java/app/localgpt/: ExampleUnitTest.kt
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/android/scripts/: build_android.sh
apps/ios/: .gitignore  README.md
apps/ios/LocalGPT App/: ContentView.swift  LocalGPT_AppApp.swift
apps/ios/LocalGPT App.xcodeproj/: project.pbxproj
apps/ios/LocalGPT AppTests/: LocalGPT_AppTests.swift
apps/ios/LocalGPT.xcodeproj/: project.pbxproj
apps/ios/LocalGPT/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/ios/LocalGPT/Models/: Message.swift
apps/ios/LocalGPT/ViewModels/: ChatViewModel.swift
apps/ios/LocalGPT/Views/: ChatView.swift
apps/ios/LocalGPT/Views/Components/: MessageBubble.swift  ThinkingIndicator.swift
apps/ios/LocalGPTUITests/: LocalGPT_AppUITests.swift  LocalGPT_AppUITestsLaunchTests.swift
apps/ios/LocalGPTWrapper/: Package.swift
apps/ios/LocalGPTWrapper/LocalGPTCore.xcframework/: Info.plist
apps/ios/LocalGPTWrapper/LocalGPTCore.xcframework/ios-arm64-simulator/Headers/: localgpt_mobileFFI.h
apps/ios/LocalGPTWrapper/LocalGPTCore.xcframework/ios-arm64/Headers/: module.modulemap
apps/ios/LocalGPTWrapper/Sources/LocalGPTWrapper/: localgpt_mobile.swift
apps/ios/scripts/: build_ios.sh
blog/: 2026-02-07-why-i-built-localgpt-in-4-nights.md
bridges/discord/: Cargo.toml
bridges/discord/src/: main.rs
bridges/telegram/: Cargo.toml
bridges/telegram/src/: main.rs
bridges/whatsapp/: Cargo.toml  package.json
crates/bridge/: Cargo.toml  README.md
crates/bridge-whatsapp/: Cargo.toml  adapter.js
crates/bridge-whatsapp/src/: main.rs
crates/bridge/src/: lib.rs  peer_identity.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cli/: ask.rs  auth.rs  chat.rs  daemon.rs  init.rs  mod.rs
crates/cli/src/desktop/: mod.rs  state.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: env.rs  lib.rs  paths.rs
crates/core/src/agent/: failover.rs  hardcoded_filters.rs  mod.rs  providers.rs  session_store.rs  skills.rs  system_prompt.rs
crates/core/src/agent/test/unit/: openaiprovider_tool_test.rs
crates/core/src/agent/tools/: mod.rs  spawn_agent.rs  web_search.rs
crates/core/src/concurrency/: workspace_lock.rs
crates/core/src/config/: mod.rs
crates/core/src/heartbeat/: events.rs  runner.rs
crates/core/src/hooks/: discovery.rs  event.rs  mod.rs  runner.rs
crates/core/src/memory/: embeddings.rs  mod.rs
crates/core/src/security/: audit.rs  bridge.rs  localgpt.rs  mod.rs  policy.rs  protected_files.rs  signing.rs
crates/mobile/: Cargo.toml
crates/mobile-ffi/: Cargo.toml  README.md
crates/mobile-ffi/src/: lib.rs
crates/mobile/ios/: README.md
crates/mobile/ios/LocalGPTApp/: ChatView.swift  ChatViewModel.swift  LocalGPTApp.swift
crates/mobile/ios/LocalGPTWrapper/: Package.swift
crates/mobile/ios/scripts/: build_ios.sh
crates/mobile/src/: lib.rs
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/src/: child.rs  macos.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: http.rs  lib.rs  telegram.rs
crates/server/src/web/: app.rs
docs/: architecture.md  cli-chat.md  cli-commands.md  configuration.md  gen-audio.md  gen.md  installation.md  intro.md  oauth-setup.md  sandbox.md
mobile/: .gitignore
mobile/android/gradle/: rust.gradle
mobile/ios/scripts/: build-rust.sh
src/: lib.rs
src/agent/: mod.rs  providers.rs  session.rs  session_store.rs  skills.rs  system_prompt.rs  tools.rs
src/cli/: chat.rs  config.rs  daemon.rs  md.rs
src/config/: mod.rs
src/css/: custom.css
src/memory/: workspace.rs
src/pages/: index.module.css  index.tsx
src/server/: http.rs
ui/: app.js
website/: .firebaserc  .gitignore  CLAUDE.md  GEMINI.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/blog/: 2026-02-07-why-i-built-localgpt-in-4-nights.md  authors.yml
website/docs/: architecture.md  bridges.md  cli-ask.md  cli-chat.md  cli-commands.md  cli-daemon.md  cli-memory.md  configuration.md  gen.md  heartbeat.md  http-api.md  intro.md  localgpt.md  memory-system.md  openclaw-migration.md  quick-start.md  skills.md  tools.md  upgrade-v0.2.md
website/src/components/HomepageFeatures/: index.tsx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/src/theme/DocItem/Footer/: index.tsx
