[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/sandbox",
    "crates/mobile",
    "crates/gen", "crates/bridge", "crates/bridge-telegram", "crates/bridge-discord", "crates/bridge-whatsapp",
]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/localgpt-app/localgpt"
homepage = "https://localgpt.app"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client for LLM APIs
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "multipart", "native-tls"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "functions", "vtab", "load_extension"] }
sqlite-vec = "0.1.7-alpha.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0"
shellexpand = "3.1"
rand = "0.10"
base64 = "0.22"

# Internal crates
localgpt-core = { path = "crates/core" }
localgpt-server = { path = "crates/server" }
localgpt-sandbox = { path = "crates/sandbox" }

[profile.release]
lto = true
codegen-units = 1
strip = true
