[package]
name = "localgpt-bridge-discord"
version = "0.1.0"
edition = "2024"
description = "Discord bridge for LocalGPT"
license.workspace = true

[dependencies]
localgpt-core = { path = "../../crates/core" }
localgpt-bridge = { path = "../../crates/bridge" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport"] }

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
