[package]
name = "localgpt-bridge-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Discord bridge for LocalGPT"

[dependencies]
localgpt-core = { workspace = true }
localgpt-bridge = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport"] }

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
