[package]
name = "localgpt-bridge-telegram"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
localgpt-core = { path = "../../crates/core" }
localgpt-bridge = { path = "../../crates/bridge" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport"] }

# Telegram
teloxide = { version = "0.17", features = ["macros"] }
# dptree is re-exported by teloxide
