[package]
name = "localgpt-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure IPC protocol for LocalGPT bridge daemons"
readme = "README.md"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
tarpc = { version = "0.37.0", features = ["tokio1", "serde-transport"] }
tokio-serde = { version = "0.9", features = ["json"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
clap = { version = "4.5.60", features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["socket", "uio", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Pipes", "Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
