[package]
name = "localgpt-mobile-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LocalGPT mobile bindings via UniFFI"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]
name = "localgpt_mobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
localgpt-core = { path = "../core", default-features = false, features = ["embeddings-openai"] }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
