[package]
name = "localgpt-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LocalGPT mobile bindings via UniFFI"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "localgpt_mobile"

[dependencies]
localgpt-core = { path = "../core", default-features = false, features = ["embeddings-openai"] }
uniffi = "0.29"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
