[package]
name = "localgpt-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LocalGPT shell sandbox — kernel-enforced execution isolation"

[dependencies]
localgpt-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Path resolution (for default deny paths)
directories = "6.0"
shellexpand = { workspace = true }

# Unix process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "resource", "signal"] }

# Linux sandbox (Landlock + seccomp)
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
