[package]
name = "localgpt-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LocalGPT HTTP server and Telegram bot"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
localgpt-core = { workspace = true }
localgpt-bridge = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Static file embedding for Web UI
rust-embed = { version = "8", features = ["compression", "interpolate-folder-path"] }
mime_guess = "2.0"

# Telegram bot
teloxide = { version = "0.17", features = ["macros"] }

# Bridge IPC
tarpc = { version = "0.37.0", features = ["tokio1", "serde-transport"] }

# Encryption for bridge credentials
chacha20poly1305 = "0.10.1"
sha2 = "0.10"
hmac = "0.12"
rand = { workspace = true }

# Utilities
tokio-stream = "0.1"
async-stream = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
